--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Burner Alarm
+author=OSRSAltar
+description=Sends a notification and plays a really annoying sound when your poh burners are about to go out
+tags=poh, player owned house, prayer, altar, burner, incense, notification, alarm
+plugins=net.runelite.client.plugins.burneralarm.BurnerAlarmPlugin
