House Hosting rebrand - adding several new features, modifying readme and adding plugin hub icon

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Burner Alarm
-author=OSRSAltar
-description=Sends a notification and plays a really annoying sound when your poh burners are about to go out
-tags=poh,player owned house,prayer,altar,burner,incense,notification,alarm
-plugins=net.runelite.client.plugins.burneralarm.BurnerAlarmPlugin
+displayName=House Hosting
+author=Altar
+description=Tools to assist players hosting their player owned house to guests.
+tags=poh,player owned house,house,host,hosting,altar,gilded altar,burners,tip,jar,tip jar,notification,alarm
+plugins=net.runelite.client.plugins.househosting.BurnerAlarmPlugin
