--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=House Hosting
 author=Altar
 description=Tools to assist players hosting their player owned house to guests.
 tags=poh,player owned house,house,host,hosting,altar,gilded altar,burners,tip,jar,tip jar,notification,alarm
-plugins=plugins=net.runelite.client.plugins.burneralarm.BurnerAlarmPlugin
+plugins=net.runelite.client.plugins.burneralarm.BurnerAlarmPlugin
